--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="jquery.js" type="text/javascript"></script>
     </head>
     <body>
-        <h1>Titulo</h1>
+        <h1>Titulo Principal</h1>
         <div id="root">
         </div>
         <div id="texto">
