--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Basico</title>
+        <title>Proyecto con git</title>
 
         <script src="react.js" type="text/javascript"></script>
         <script src="reactdom.js" type="text/javascript"></script>
@@ -11,7 +11,7 @@
         <script src="jquery.js" type="text/javascript"></script>
     </head>
     <body>
-        <h1>Titulo Principal</h1>
+        <h1>Probando las ramas de git</h1>
         <div id="root">
         </div>
         <div id="texto">
